# Page-Matching

./: .gitignore
MobileCollector/: README.md
MobileCollector/Server/: .env.example  config.py  main.py  pyproject.toml  server.py
MobileCollector/Server/agents/: app_agent.py  history_agent.py  keyui_selector.py  summary_agent.py
MobileCollector/Server/agents/prompts/: expand_prompt.py  subtask_prompt.py  summary_prompt.py
MobileCollector/Server/data/: models.py
MobileCollector/Server/graphs/: __init__.py  state.py
MobileCollector/Server/graphs/nodes/: discover_node.py  explore_action_node.py
MobileCollector/Server/handlers/: __init__.py  message_handlers.py
MobileCollector/Server/matching/: bundle_manager.py  page_matcher.py  page_registry.py  ui_matcher.py
MobileCollector/Server/memory/: __init__.py  collector_memory.py  explore_memory.py  state_persistence.py
MobileCollector/Server/storage/: encoder.py  page_storage.py
MobileCollector/Server/tests/: test_collector_graph.py  test_encoder.py  test_graph_nodes.py  test_matching.py  test_models.py  test_safety_filter.py  test_storage.py  test_xml_parser.py
MobileCollector/Server/utils/: __init__.py  embedding.py  logging.py
MobileCollector/app_collector/: settings.gradle
MobileCollector/app_collector/app/: build.gradle
MobileGPT-Collector/: README.md
MobileGPT-Collector/Server/: config.py  main.py  pyproject.toml  server.py
MobileGPT-Collector/Server/agents/: __init__.py  history_agent.py  safety_filter.py  subtask_extractor.py
MobileGPT-Collector/Server/agents/prompts/: expand_prompt.py  history_prompt.py  keyui_prompt.py
MobileGPT-Collector/Server/data/: models.py
MobileGPT-Collector/Server/graphs/: __init__.py  collector_graph.py  state.py
MobileGPT-Collector/Server/graphs/nodes/: __init__.py  discover_node.py  explore_action_node.py  supervisor_node.py
MobileGPT-Collector/Server/handlers/: message_handlers.py
MobileGPT-Collector/Server/matching/: __init__.py  base.py  bundle_manager.py  embedding_strategy.py  factory.py  keyui_v1_strategy.py  page_matcher.py  page_registry.py  ui_matcher.py
MobileGPT-Collector/Server/memory/: __init__.py  collector_memory.py  explore_memory.py
MobileGPT-Collector/Server/storage/: __init__.py  encoder.py  page_storage.py
MobileGPT-Collector/Server/tests/: test_collector_graph.py  test_encoder.py  test_graph_nodes.py  test_matching.py  test_models.py  test_safety_filter.py  test_storage.py  test_xml_parser.py
MobileGPT-Collector/Server/utils/: __init__.py  embedding.py  llm_client.py  network.py  xml_parser.py
MobileGPT-Collector/app_collector/: settings.gradle
MobileGPT-Collector/app_collector/app/src/main/: AndroidManifest.xml
(+16 files in other folders)
