[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobilecollector"
version = "0.1.0"
description = "KeyUI-based automatic mobile app screen data collector"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "google-genai>=1.51.0",
    "pydantic>=2.0.0",
    "lxml>=4.9.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "google-search-results>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mobilecollector = "mobilecollector.main:main"

[tool.setuptools]
packages = [
    "mobilecollector",
    "mobilecollector.agents",
    "mobilecollector.agents.prompts",
    "mobilecollector.data",
    "mobilecollector.graphs",
    "mobilecollector.graphs.nodes",
    "mobilecollector.handlers",
    "mobilecollector.matching",
    "mobilecollector.memory",
    "mobilecollector.storage",
    "mobilecollector.tests",
    "mobilecollector.utils",
]
package-dir = {"mobilecollector" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
